
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ glXext_3DFX_multisample ;
 scalar_t__ glXext_AMD_gpu_association ;
 scalar_t__ glXext_ARB_create_context ;
 scalar_t__ glXext_ARB_create_context_profile ;
 scalar_t__ glXext_ARB_create_context_robustness ;
 scalar_t__ glXext_ARB_fbconfig_float ;
 scalar_t__ glXext_ARB_framebuffer_sRGB ;
 scalar_t__ glXext_ARB_get_proc_address ;
 scalar_t__ glXext_ARB_multisample ;
 scalar_t__ glXext_ARB_robustness_application_isolation ;
 scalar_t__ glXext_ARB_robustness_share_group_isolation ;
 scalar_t__ glXext_ARB_vertex_buffer_object ;
 scalar_t__ glXext_EXT_buffer_age ;
 scalar_t__ glXext_EXT_create_context_es2_profile ;
 scalar_t__ glXext_EXT_create_context_es_profile ;
 scalar_t__ glXext_EXT_fbconfig_packed_float ;
 scalar_t__ glXext_EXT_framebuffer_sRGB ;
 scalar_t__ glXext_EXT_import_context ;
 scalar_t__ glXext_EXT_swap_control ;
 scalar_t__ glXext_EXT_swap_control_tear ;
 scalar_t__ glXext_EXT_texture_from_pixmap ;
 scalar_t__ glXext_EXT_visual_info ;
 scalar_t__ glXext_EXT_visual_rating ;
 scalar_t__ glXext_INTEL_swap_event ;
 scalar_t__ glXext_MESA_agp_offset ;
 scalar_t__ glXext_MESA_copy_sub_buffer ;
 scalar_t__ glXext_MESA_pixmap_colormap ;
 scalar_t__ glXext_MESA_release_buffers ;
 scalar_t__ glXext_MESA_set_3dfx_mode ;
 scalar_t__ glXext_NV_copy_image ;
 scalar_t__ glXext_NV_float_buffer ;
 scalar_t__ glXext_NV_multisample_coverage ;
 scalar_t__ glXext_NV_present_video ;
 scalar_t__ glXext_NV_swap_group ;
 scalar_t__ glXext_NV_video_capture ;
 scalar_t__ glXext_NV_video_output ;
 scalar_t__ glXext_OML_swap_method ;
 scalar_t__ glXext_OML_sync_control ;
 scalar_t__ glXext_SGIS_blended_overlay ;
 scalar_t__ glXext_SGIS_multisample ;
 scalar_t__ glXext_SGIS_shared_multisample ;
 scalar_t__ glXext_SGIX_fbconfig ;
 scalar_t__ glXext_SGIX_pbuffer ;
 scalar_t__ glXext_SGIX_swap_barrier ;
 scalar_t__ glXext_SGIX_swap_group ;
 scalar_t__ glXext_SGIX_video_resize ;
 scalar_t__ glXext_SGIX_visual_select_group ;
 scalar_t__ glXext_SGI_cushion ;
 scalar_t__ glXext_SGI_make_current_read ;
 scalar_t__ glXext_SGI_swap_control ;
 scalar_t__ glXext_SGI_video_sync ;
 scalar_t__ glXext_SUN_get_transparent_index ;

__attribute__((used)) static void ClearExtensionVars()
{
 glXext_3DFX_multisample = 0;
 glXext_AMD_gpu_association = 0;
 glXext_ARB_create_context = 0;
 glXext_ARB_create_context_profile = 0;
 glXext_ARB_create_context_robustness = 0;
 glXext_ARB_fbconfig_float = 0;
 glXext_ARB_framebuffer_sRGB = 0;
 glXext_ARB_get_proc_address = 0;
 glXext_ARB_multisample = 0;
 glXext_ARB_robustness_application_isolation = 0;
 glXext_ARB_robustness_share_group_isolation = 0;
 glXext_ARB_vertex_buffer_object = 0;
 glXext_EXT_buffer_age = 0;
 glXext_EXT_create_context_es2_profile = 0;
 glXext_EXT_create_context_es_profile = 0;
 glXext_EXT_fbconfig_packed_float = 0;
 glXext_EXT_framebuffer_sRGB = 0;
 glXext_EXT_import_context = 0;
 glXext_EXT_swap_control = 0;
 glXext_EXT_swap_control_tear = 0;
 glXext_EXT_texture_from_pixmap = 0;
 glXext_EXT_visual_info = 0;
 glXext_EXT_visual_rating = 0;
 glXext_INTEL_swap_event = 0;
 glXext_MESA_agp_offset = 0;
 glXext_MESA_copy_sub_buffer = 0;
 glXext_MESA_pixmap_colormap = 0;
 glXext_MESA_release_buffers = 0;
 glXext_MESA_set_3dfx_mode = 0;
 glXext_NV_copy_image = 0;
 glXext_NV_float_buffer = 0;
 glXext_NV_multisample_coverage = 0;
 glXext_NV_present_video = 0;
 glXext_NV_swap_group = 0;
 glXext_NV_video_capture = 0;
 glXext_NV_video_output = 0;
 glXext_OML_swap_method = 0;
 glXext_OML_sync_control = 0;
 glXext_SGIS_blended_overlay = 0;
 glXext_SGIS_multisample = 0;
 glXext_SGIS_shared_multisample = 0;
 glXext_SGIX_fbconfig = 0;
 glXext_SGIX_pbuffer = 0;
 glXext_SGIX_swap_barrier = 0;
 glXext_SGIX_swap_group = 0;
 glXext_SGIX_video_resize = 0;
 glXext_SGIX_visual_select_group = 0;
 glXext_SGI_cushion = 0;
 glXext_SGI_make_current_read = 0;
 glXext_SGI_swap_control = 0;
 glXext_SGI_video_sync = 0;
 glXext_SUN_get_transparent_index = 0;
}
