; ModuleID = '/home/carl/AnghaBench/Cinder/src/glload/extr_glx_load.c_ClearExtensionVars.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glload/extr_glx_load.c_ClearExtensionVars.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@glXext_3DFX_multisample = common dso_local global i64 0, align 8
@glXext_AMD_gpu_association = common dso_local global i64 0, align 8
@glXext_ARB_create_context = common dso_local global i64 0, align 8
@glXext_ARB_create_context_profile = common dso_local global i64 0, align 8
@glXext_ARB_create_context_robustness = common dso_local global i64 0, align 8
@glXext_ARB_fbconfig_float = common dso_local global i64 0, align 8
@glXext_ARB_framebuffer_sRGB = common dso_local global i64 0, align 8
@glXext_ARB_get_proc_address = common dso_local global i64 0, align 8
@glXext_ARB_multisample = common dso_local global i64 0, align 8
@glXext_ARB_robustness_application_isolation = common dso_local global i64 0, align 8
@glXext_ARB_robustness_share_group_isolation = common dso_local global i64 0, align 8
@glXext_ARB_vertex_buffer_object = common dso_local global i64 0, align 8
@glXext_EXT_buffer_age = common dso_local global i64 0, align 8
@glXext_EXT_create_context_es2_profile = common dso_local global i64 0, align 8
@glXext_EXT_create_context_es_profile = common dso_local global i64 0, align 8
@glXext_EXT_fbconfig_packed_float = common dso_local global i64 0, align 8
@glXext_EXT_framebuffer_sRGB = common dso_local global i64 0, align 8
@glXext_EXT_import_context = common dso_local global i64 0, align 8
@glXext_EXT_swap_control = common dso_local global i64 0, align 8
@glXext_EXT_swap_control_tear = common dso_local global i64 0, align 8
@glXext_EXT_texture_from_pixmap = common dso_local global i64 0, align 8
@glXext_EXT_visual_info = common dso_local global i64 0, align 8
@glXext_EXT_visual_rating = common dso_local global i64 0, align 8
@glXext_INTEL_swap_event = common dso_local global i64 0, align 8
@glXext_MESA_agp_offset = common dso_local global i64 0, align 8
@glXext_MESA_copy_sub_buffer = common dso_local global i64 0, align 8
@glXext_MESA_pixmap_colormap = common dso_local global i64 0, align 8
@glXext_MESA_release_buffers = common dso_local global i64 0, align 8
@glXext_MESA_set_3dfx_mode = common dso_local global i64 0, align 8
@glXext_NV_copy_image = common dso_local global i64 0, align 8
@glXext_NV_float_buffer = common dso_local global i64 0, align 8
@glXext_NV_multisample_coverage = common dso_local global i64 0, align 8
@glXext_NV_present_video = common dso_local global i64 0, align 8
@glXext_NV_swap_group = common dso_local global i64 0, align 8
@glXext_NV_video_capture = common dso_local global i64 0, align 8
@glXext_NV_video_output = common dso_local global i64 0, align 8
@glXext_OML_swap_method = common dso_local global i64 0, align 8
@glXext_OML_sync_control = common dso_local global i64 0, align 8
@glXext_SGIS_blended_overlay = common dso_local global i64 0, align 8
@glXext_SGIS_multisample = common dso_local global i64 0, align 8
@glXext_SGIS_shared_multisample = common dso_local global i64 0, align 8
@glXext_SGIX_fbconfig = common dso_local global i64 0, align 8
@glXext_SGIX_pbuffer = common dso_local global i64 0, align 8
@glXext_SGIX_swap_barrier = common dso_local global i64 0, align 8
@glXext_SGIX_swap_group = common dso_local global i64 0, align 8
@glXext_SGIX_video_resize = common dso_local global i64 0, align 8
@glXext_SGIX_visual_select_group = common dso_local global i64 0, align 8
@glXext_SGI_cushion = common dso_local global i64 0, align 8
@glXext_SGI_make_current_read = common dso_local global i64 0, align 8
@glXext_SGI_swap_control = common dso_local global i64 0, align 8
@glXext_SGI_video_sync = common dso_local global i64 0, align 8
@glXext_SUN_get_transparent_index = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ClearExtensionVars to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ClearExtensionVars() #0 {
  store i64 0, i64* @glXext_3DFX_multisample, align 8
  store i64 0, i64* @glXext_AMD_gpu_association, align 8
  store i64 0, i64* @glXext_ARB_create_context, align 8
  store i64 0, i64* @glXext_ARB_create_context_profile, align 8
  store i64 0, i64* @glXext_ARB_create_context_robustness, align 8
  store i64 0, i64* @glXext_ARB_fbconfig_float, align 8
  store i64 0, i64* @glXext_ARB_framebuffer_sRGB, align 8
  store i64 0, i64* @glXext_ARB_get_proc_address, align 8
  store i64 0, i64* @glXext_ARB_multisample, align 8
  store i64 0, i64* @glXext_ARB_robustness_application_isolation, align 8
  store i64 0, i64* @glXext_ARB_robustness_share_group_isolation, align 8
  store i64 0, i64* @glXext_ARB_vertex_buffer_object, align 8
  store i64 0, i64* @glXext_EXT_buffer_age, align 8
  store i64 0, i64* @glXext_EXT_create_context_es2_profile, align 8
  store i64 0, i64* @glXext_EXT_create_context_es_profile, align 8
  store i64 0, i64* @glXext_EXT_fbconfig_packed_float, align 8
  store i64 0, i64* @glXext_EXT_framebuffer_sRGB, align 8
  store i64 0, i64* @glXext_EXT_import_context, align 8
  store i64 0, i64* @glXext_EXT_swap_control, align 8
  store i64 0, i64* @glXext_EXT_swap_control_tear, align 8
  store i64 0, i64* @glXext_EXT_texture_from_pixmap, align 8
  store i64 0, i64* @glXext_EXT_visual_info, align 8
  store i64 0, i64* @glXext_EXT_visual_rating, align 8
  store i64 0, i64* @glXext_INTEL_swap_event, align 8
  store i64 0, i64* @glXext_MESA_agp_offset, align 8
  store i64 0, i64* @glXext_MESA_copy_sub_buffer, align 8
  store i64 0, i64* @glXext_MESA_pixmap_colormap, align 8
  store i64 0, i64* @glXext_MESA_release_buffers, align 8
  store i64 0, i64* @glXext_MESA_set_3dfx_mode, align 8
  store i64 0, i64* @glXext_NV_copy_image, align 8
  store i64 0, i64* @glXext_NV_float_buffer, align 8
  store i64 0, i64* @glXext_NV_multisample_coverage, align 8
  store i64 0, i64* @glXext_NV_present_video, align 8
  store i64 0, i64* @glXext_NV_swap_group, align 8
  store i64 0, i64* @glXext_NV_video_capture, align 8
  store i64 0, i64* @glXext_NV_video_output, align 8
  store i64 0, i64* @glXext_OML_swap_method, align 8
  store i64 0, i64* @glXext_OML_sync_control, align 8
  store i64 0, i64* @glXext_SGIS_blended_overlay, align 8
  store i64 0, i64* @glXext_SGIS_multisample, align 8
  store i64 0, i64* @glXext_SGIS_shared_multisample, align 8
  store i64 0, i64* @glXext_SGIX_fbconfig, align 8
  store i64 0, i64* @glXext_SGIX_pbuffer, align 8
  store i64 0, i64* @glXext_SGIX_swap_barrier, align 8
  store i64 0, i64* @glXext_SGIX_swap_group, align 8
  store i64 0, i64* @glXext_SGIX_video_resize, align 8
  store i64 0, i64* @glXext_SGIX_visual_select_group, align 8
  store i64 0, i64* @glXext_SGI_cushion, align 8
  store i64 0, i64* @glXext_SGI_make_current_read, align 8
  store i64 0, i64* @glXext_SGI_swap_control, align 8
  store i64 0, i64* @glXext_SGI_video_sync, align 8
  store i64 0, i64* @glXext_SUN_get_transparent_index, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
